# digitRecognizer

./: .gitignore  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  digitRecognicer-console.py  digitRecognizer.py  myObjects.py  myWidgets.py  neuralNetwork.py  setup.cfg  setup.py  test.py  tox.ini
digitRecognizer-gui/: digitRecognizer.py  myObjects.py  myWidgets.py
digitRecognizer-gui/ui/: aiPanel.ui  imagenControlPanel.ui  imagesControlPanel.ui  imagesPanel.ui  iv.ui
docs/: conf.py  index.rst
src/: digitRecognizer.cfg
src/aptiv.digitRecognizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/digitRecognizer/: .gitignore  __about__.py  __config__.py  __init__.py  __main__.py  config.py  digitRecognizer.py  main.py  myObjects.py
src/digitRecognizer/ui/: imagesControlPanel.ui  imagesPanel.ui
tests/: __init__.py  __main__.py
