# Copyright (c) 2019 Damian Grzywna
# Licensed under the zlib/libpng License
# http://opensource.org/licenses/zlib/

[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = digitRecognizer
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.5.0, !=3.6
setup_requires =
    setuptools>=40.7.3
install_requires =
    setuptools>=40.7.3
	pyqt5>=5.2.13
	numpy>=1.16.4
	opencv-python>=4.1.0
	Keras>=2.0.0
	tensorflow>=1.14.0
packages = find:
package_dir =
    = src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
doc =
    Sphinx>=2.1.0
    restructuredtext-lint>=1.3.0
test =
    pyreadline>=2.1.0

[options.entry_points]
console_scripts =
    digitRecognizer = digitRecognizer.__main__:main

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
